--- a/workshops.html
+++ b/workshops.html
@@ -121,8 +121,20 @@
     </ul>
   </div>
 </section>
-
-
+<section class="main-content">
+  <div class="project-card">
+    <div class="card-text">
+      <h3>✨ Next Coming Workshop: The "Sandwich" Lantern</h3>
+      <p><strong>Technique:</strong> Organic vs. Synthetic Balance</p>
+      <p>
+        Directly applying the method from the <em>Rabbit Children</em> series, participants learn to protect delicate <strong>Mulberry paper</strong> between layers of <strong>translucent silk-like fabric</strong>. 
+      </p>
+      <p>
+        We use <strong>heavy-duty staplers</strong> for rapid, mechanical construction—ensuring the lantern is ready for immediate transport and West Coast rain resilience.
+      </p>
+    </div>
+  </div>
+  </section>
 <section id="featured-event">
   <div class="project-banner-note featured-card">
     <span class="status-badge-live">✨ LIVE EVENT</span>
