Update Eco_illum.html. 2nd insert of material resistance

--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -156,68 +156,154 @@
   </p>
 </section>
 
-<section id="outdoor-engineering" class="main-content">
+<section
+  id="outdoor-engineering"
+  class="main-content"
+  aria-labelledby="material-resistance-heading"
+  role="region"
+>
   <div class="project-banner-note">
-    <h2>🌳 Material Resistance: Balancing Organic & Synthetic Resilience</h2>
-    <p>
-My practice explores the equilibrium between organic natural matter and post-consumer waste. This inquiry is informed by early professional training as a medical laboratory technologist (2000–2009), followed by long-term work in health IT. Although my lab career concluded in 2009, I continue to work as an experimenter—testing how contrasting materials respond to prolonged rain, wind, and outdoor exposure across the West Coast. These material trials shape durable, site-responsive installations that evolve through real-world conditions rather than controlled studio environments.
-</p>
+    <h2 id="material-resistance-heading">
+      🌳 Material Resistance: Balancing Organic & Synthetic Resilience
+    </h2>
 
+    <p>
+      Material resistance is an ongoing inquiry in my practice. This research began
+      with a shift from summer lantern builds—such as Vancouver’s Illuminares festivals
+      in the mid-2000s—to autumn and winter installations for festivals like
+      Renfrew Ravine Moon Festival and winter solstice lantern events.
+    </p>
+
+    <p>
+      This inquiry is informed by early professional training as a medical laboratory
+      technologist (2000–2009), followed by long-term work in health IT.
+      I approach materials as an experimenter—testing how organic matter and
+      post-consumer waste respond to rain, wind, and repeated outdoor exposure
+      across the West Coast.
     </p>
   </div>
 
   <div class="project-grid">
+    <!-- I -->
     <div class="project-card">
       <div class="card-text">
-        <h3>I. Organic Preservation (The Rabbit Children)</h3>
-        <p>Combining <strong>Mulberry paper</strong> memories with protective fabric layers. This "sandwich" technique uses organic fibers and translucent textiles to ensure traditional ink-work can survive 3-day rain exposure without losing its pictorial essence.</p>
+        <h3>I. Organic Preservation with Fabric — The Rabbit Children</h3>
+        <p>
+          Early paper-and-bamboo lanterns absorbed rain quickly during outdoor use.
+          During a <strong>three-day rain stress-test at the Out There Art Festival (2010)</strong>,
+          I began experimenting with fabric as a protective layer for mulberry paper
+          calligraphic brushwork.
+        </p>
+        <p>
+          By layering translucent fabric above and below the paper—forming a
+          <strong>fabric “sandwich”</strong>—the ink-work is preserved while allowing
+          the lantern to withstand prolonged rain exposure.
+        </p>
       </div>
     </div>
 
+    <!-- II -->
     <div class="project-card">
       <div class="card-text">
-        <h3>II. Hybrid Skeletons (The Rabbit Mother)</h3>
-        <p>A bridge between <strong>garden clippings</strong> and <strong>abandoned tomato cages</strong>. By integrating organic rosemary and lavender stems with rigid post-consumer garden structures, I create a frame that is both ecologically grounded and structurally resilient.</p>
+        <h3>II. Robust Skeleton & Hand-Sewn Repair — The Rabbit Mother</h3>
+        <p>
+          As traditional skin-on bamboo slats became difficult to source sustainably,
+          I shifted toward locally available post-consumer garden materials.
+          The Rabbit Mother (2023) combines a neglected hanging flower basket with
+          <strong>abandoned tomato cages</strong>.
+        </p>
+        <p>
+          I moved away from white PVC glue used in summer builds, which fails under
+          prolonged rain. Instead, I employ <strong>hand-sewn domestic repair techniques</strong>,
+          using moisture-resistant thread and lavender stems to create a form that has
+          survived four festivals and multiple outdoor activations.
+        </p>
       </div>
     </div>
 
+    <!-- III -->
     <div class="project-card">
       <div class="card-text">
-        <h3>III. Synthetic Transformation (The Feminist Dragon)</h3>
-        <p>Built from a <strong>collapsed laundry basket</strong> and reinforced grapevines. This design repurposes domestic plastic waste into a lightweight, aerial-ready form, proving that "broken" household objects can be re-engineered for public site-activation.</p>
+        <h3>III. Material Stress & Hybrid Resilience — The Feminist Dragon</h3>
+        <p>
+          The Feminist Dragon (2024) extends material testing through a hybrid structure
+          composed of garden branches, grapevines, rosemary stems, and a
+          <strong>collapsed mesh laundry basket</strong> as its armature.
+        </p>
+        <p>
+          Organic materials provide scent and form but require reinforcement over time.
+          The dragon’s complex curvature demanded intensive hand-sewing and adaptive
+          repair, drawing on techniques learned through large-scale lantern construction.
+        </p>
       </div>
     </div>
 
+    <!-- IV -->
     <div class="project-card">
       <div class="card-text">
-        <h3>IV. Post-Consumer Casting (The Turtle)</h3>
-        <p>The peak of <strong>material durability</strong>. Using semi-casting methods with <strong>upcycled plastics</strong>, the Turtle is my most weather-proof iteration. It demonstrates how industrial waste can be reshaped into fast-production, moisture-resistant sculptural forms.</p>
-        <p class="highlight-note">
-Much of this material knowledge was developed through repeated volunteer-based lantern building over many summers—particularly with Vancouver Illuminares—where large-scale forms such as the Whale and floating airplane required collaborative problem-solving, lightweight balance, and weather resilience.
-</p>
-Among the volunteer-built works I am most proud of are the Whale and floating airplane lanterns created with Vancouver Illuminares (circa mid-2000s), which required collaborative engineering, lightweight balance, and outdoor durability.
+        <h3>IV. Post-Consumer Casting — The Turtle</h3>
+        <p>
+          The Turtle (2025) represents the most weather-resistant iteration in my practice.
+          Using <strong>semi-casting methods with upcycled plastics</strong>, it demonstrates
+          how industrial waste can be reshaped into durable sculptural forms for
+          repeated outdoor use.
+        </p>
       </div>
     </div>
+  </div>
+</section>
+
+    <section
+  class="micro-chapter"
+  aria-labelledby="lineage-heading"
+  role="region"
+>
+  <h3 id="lineage-heading">Remade Surfaces & Lineage</h3>
+  <h4>Owl and Whale</h4>
+
+  <p>
+    My lantern-making roots lie in childhood play and co-making with my mother,
+    where repair, improvisation, and reuse were learned informally and through necessity.
+    Lantern surfaces in my practice are often remade year after year.
+  </p>
+
+  <p>
+    In one instance, my mother repaired damaged paper owl lanterns with fabric without
+    consulting me. What initially felt like a disruption later revealed itself as part
+    of a shared lineage of care—where preservation matters more than authorship.
+  </p>
+
+  <p>
+    In 2003, I attended a one-day master session organized by the nadian cultural society
+    . This was not paid work but revise the making lantern with paper-coated wire and fabric
+    are comptemety chinese lantern.
+  </p>
+
+  <p>
+    My skills were primarily honed through volunteer-based building with
+    Vancouver Illuminares during the mid-2000s. These projects demanded collaborative
+    engineering, rapid repair, and real-world weather resilience.
+    The <strong>Whale</strong> and <strong>floating airplane</strong> lanterns
+    (circa 2005–2006) remain works I am especially proud of.
+  </p>
+
+  <p>
+    This lineage—rooted in family repair, volunteer labor, and collective making—
+    continues to shape how I approach lanterns as living surfaces that carry time,
+    care, and return.
+  </p>
+</section>
 
 
-    <div class="project-banner-note" style="border-top: 2px solid #C66A53; margin-top: 2rem; padding-top: 2rem;">
+<div class="project-banner-note" style="border-top: 2px solid #C66A53; margin-top: 2rem; padding-top: 2rem;">
     <h3>🔬 Field Proof: The Neuro-Sensing Walks</h3>
-    <p>
-      My engineering process is validated through <strong>site-responsive sensing walks</strong>. These modular lanterns travel via public transit and ferries to test structural resilience in real-world conditions—from the urban geometry of <strong>Science World</strong> to the high-wind habitats of <strong>Ambleside Beach</strong>.
-    </p>
-    
+    <p>My engineering process is validated through <strong>site-responsive sensing walks</strong> across real-world conditions like <strong>Science World</strong> and <strong>Ambleside Beach</strong>.</p>
     <div style="display: flex; gap: 1rem; flex-wrap: wrap; align-items: center;">
-       <a href="#lantern-travelers-anchor" class="button glow-ink">Explore the Full Photo Documentation ↓</a>
-       <p style="font-size: 0.9rem; margin: 0; color: var(--text-dim);">
-         <em>*Click to jump to the detailed journey of the Owl and Dragon travelers.</em>
-       </p>
+      <a href="#lantern-travelers-anchor" class="button glow-ink">Explore the Full Photo Documentation ↓</a>
     </div>
   </div>
 </section>
  
-
-  
-</section>
   
   <section>
     <h2>📸 Eco-Illuminessence: A Living Work in Progress</h2>
@@ -696,6 +782,7 @@ function initializeTheme(defaultDark) {
 
 </body>
 </html>
+
 
 
 
