Update Eco_illum.html seo

--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Eco-Illuminessence: A Sensory Crossing</title>
-  <meta name="description" content="Eco-Illuminessence is a multisensory installation-performance by Ann K. Chou exploring shadow, light, sumi-e, and embodied non-verbal storytelling through lanterns and interaction." />
-  <meta name="keywords" content="Eco-Illuminessence, Ann Chou, lantern installation, sumi-e art, performance art, accessibility, non-verbal art, shadow puppetry, visual poetry, Victoria art, Xchange gallery" />
+  <title>Eco-Illuminessence: Non-Verbal Sensory Crossing | Ann K. Chou</title>
+  <meta name="description" content="A hybrid multisensory installation and non-verbal performance by Ann K. Chou. Exploring shadow dance, sumi-e, and material resilience through upcycled lanterns." />
+  <meta name="keywords" content="non-verbal performance art, Eco-Illuminessence, Ann K. Chou, access-led installation, shadow dance Vancouver, d/Deaf artist Victoria, sensory storytelling, sumi-e lanterns, inclusive art" /> 
   <meta name="author" content="Ann K. Chou" />
   <meta property="og:title" content="Eco-Illuminessence – A Sensory Crossing by Ann K. Chou" />
-  <meta property="og:description" content="Shadow, light, and sensory improvisation meet in this hybrid art-performance project." />
-  <meta property="og:image" content="https://annchou.github.io/rss-eco/AnnChou_eco1_dragon_governerhouse_day.jpg" />
+  <meta property="og:description" content="An access-led performance-installation using animal-shaped lanterns, shifting light, and shadow to create non-verbal narrative experiences." />  <meta property="og:image" content="https://annchou.github.io/rss-eco/AnnChou_eco1_dragon_governerhouse_day.jpg" />
   <meta property="og:url" content="https://annchou.github.io/Eco_illum.html" />
   <meta name="twitter:card" content="summary_large_image" />
 
@@ -782,6 +781,7 @@ function initializeTheme(defaultDark) {
 
 </body>
 </html>
+
 
 
 
