Revise featured event details and registration link
Updated event details and registration information for the featured workshop.

--- a/workshops.html
+++ b/workshops.html
@@ -141,19 +141,19 @@
   
 <section id="featured-event">
   <div class="project-banner-note featured-card">
-    <span class="status-badge-live">✨ LIVE EVENT</span>
+    <span class="status-badge-live">✨ LIVE EVENT: Victoria at Dusk</span>
     <h2>Teapot Lanterns: Brewing Light & Connection</h2>
-    <p>A community workshop inspired by tea culture and the adaptive plasticity of reclaimed materials.</p>
+    <p>A community workshop transforming upcycled cups into glowing art. Share your heritage through Sumi-e ink motifs!</p>
     
     <div class="event-details-bar">
       <span>📅 Friday, Feb 13, 2026</span>
-      <span>📍 NeighbourSpace</span>
-      <span>👥 Capacity: Max 24 people</span>
+      <span>📍 Royal BC Museum (Cafe Space)</span>
+      <span>🕒 Demos: 5:10 PM & 6:40 PM | Drop-ins: 6:00 PM – 8:00 PM</span>
     </div>
 
     <div class="registration-box">
-      <p><strong>Registration Required:</strong> Spaces limited to maintain a sensory-friendly environment.</p>
-      <a href="#" class="cta glow">Register for Teapot Jam →</a>
+      <p><strong>Registration Recommended:</strong> Secure your materials and a seat at the communal table.</p>
+      <a href="https://annreflection.eventbrite.ca" class="cta glow" target="_blank">Reserve Your Spot →</a>
     </div>
   </div>
 </section>
