Add workshop poster image for Teapot Lantern event
Added an image for the Teapot Lantern workshop.

--- a/workshops.html
+++ b/workshops.html
@@ -144,6 +144,10 @@
     <span class="status-badge-live">✨ LIVE EVENT: Victoria at Dusk</span>
     <h2>Teapot Lanterns: Brewing Light & Connection</h2>
     <p>A community workshop transforming upcycled cups into glowing art. Share your heritage through Sumi-e ink motifs!</p>
+
+    <div style="text-align: center; margin: 1.5rem 0;">
+      <img src="rss-wor/teapot _lantern _workshop_poster_VAD.png" alt="Teapot Lantern Workshop Poster" style="max-width: 100%; border-radius: 8px; border: 1px solid #ddd;">
+    </div>
     
     <div class="event-details-bar">
       <span>📅 Friday, Feb 13, 2026</span>
