update index.html. royal bc museum

--- a/index.html
+++ b/index.html
@@ -159,15 +159,18 @@
         <h3>✨ Recent News & Upcoming</h3>
         <p>
           <strong>Teapot Lanterns: Brewing Light & Connection</strong><br>
-          Join me for a free teapot lantern-making workshop at NeighbourSpace.
+          Join me for a free teapot lantern-making workshop in conjunction with <strong>Victoria at Dusk</strong>.
         </p>
         <ul>
-          <li><strong>When:</strong> Friday, Feb 13, 2026 (Time TBD)</li>
-          <li><strong>Note:</strong> Dates may shift to March if needed.</li>
+          <li><strong>When:</strong> Friday, Feb 13, 2026 (5:00 PM – 8:30 PM)</li>
+          <li><strong>Where:</strong> Royal BC Museum Cafe, Victoria</li>
         </ul>
-        <a href="https://annreflection.substack.com/" class="button-ghost glow-green">Follow for Workshop Updates →</a>
+        <div style="margin-top: 1rem; display: flex; gap: 10px; flex-wrap: wrap;">
+          <a href="workshops.html" class="button-ghost" style="padding: 10px 20px; text-decoration: none;">View Details & Register</a>
+          <a href="https://annreflection.substack.com/" class="button-ghost glow-green" style="padding: 10px 20px; text-decoration: none;">Follow for Workshop Updates →</a>
+        </div>
       </div>
-    </section>
+</section>
     <section id="featured-projects">
       <h2>Key Artistic Projects</h2>
       <div class="project-grid">
@@ -709,6 +712,7 @@ function initializeTheme(defaultDark) {
 </body>
 
 </html>
+
 
 
 
